--- a/manifests/tasks.yaml
+++ b/manifests/tasks.yaml
@@ -84,7 +84,7 @@ spec:
       default: ""
     - name: SONAR_SCANNER_IMAGE
       description: "The sonarqube scanner CLI image which will run the scan"
-      default: "docker.io/sonarsource/sonar-scanner-cli:4.6@sha256:7a976330a8bad1beca6584c1c118e946e7a25fdc5b664d5c0a869a6577d81b4f"
+      default: "docker.io/sonarsource/sonar-scanner-cli:latest"
     - name: SONAR_LOGIN_KEY
       description: Name of the file of the login within the sonarqube credentials workspace
       default: "login"
